# sc2-kiss

./: .gitignore  .gitmodules  Cargo.toml  README.md  rustfmt.toml
async-core/: Cargo.toml
async-core/src/: client.rs  lib.rs  server.rs
async-core/src/request/: game.rs  mod.rs  other.rs  setup.rs
core/: Cargo.toml
core/examples/: launch.rs  maps.rs  ping.rs  quit.rs
core/src/: client.rs  common.rs  instance.rs  launcher.rs  lib.rs  request.rs  server.rs
core/src/request/: game.rs  mod.rs  other.rs  setup.rs
kiss/: Cargo.toml
kiss/src/: act.rs  chat.rs  cli.rs  debug.rs  game_loop.rs  lib.rs  linalg.rs  map.rs  unit.rs
kiss/src/action/: chat.rs  mod.rs  unit.rs
kiss/src/ids/: ability.rs  buff.rs  effect.rs  mod.rs  remap.rs  unit.rs  unit_kind.rs  upgrade.rs
pb/prost/: Cargo.toml  build.rs
pb/prost/src/: lib.rs
util/id-gen/: Cargo.toml
util/id-gen/src/: main.rs
utils/id-gen/: Cargo.toml
utils/id-gen/src/: main.rs
