[package]
name = "sc2-async-core"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
sc2-core = { version = "0.1.0", path = "../core", default-features = false }
sc2-prost = { version = "0.1.0", path = "../pb/prost" }
tokio-tungstenite = "0.28"
tokio = { version = "1.44", features = ["net"] }
futures-util = "0.3"

[dev-dependencies]

[features]
default = ["client", "request-helpers"]
client = ["sc2-core/client"]
request-helpers = ["sc2-core/request-helpers"]
launcher = ["sc2-core/launcher"]
server = ["sc2-core/server"]
