[package]
name = "sc2-core"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
tungstenite = "0.26"
sc2-prost = { version = "0.1.0", path = "../pb/prost" }
prost = "0.13"
thiserror = "2.0"
camino = { version = "1.1", optional = true }
bitflags = { version = "2.8", optional = true }
dirs = { version = "6.0", optional = true }

[dev-dependencies]

[features]
default = ["client", "request-helpers", "instance"]
client = []
request-helpers = ["client", "dep:camino", "dep:bitflags"]
instance = ["dep:dirs"]
