[package]
name = "sc2-core"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
tungstenite = "0.28"
sc2-prost = { version = "0.1.0", path = "../pb/prost" }
prost = "0.14"
thiserror = "2.0"
camino = { version = "1.2", optional = true }
dirs = { version = "6.0", optional = true }

[dev-dependencies]

[features]
default = ["client", "request-helpers"]
client = []
request-helpers = ["client", "dep:camino"]
launcher = ["dep:dirs"]
server = []
