[package]
name = "sc2-kiss"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
sc2-core = { version = "0.1.0", path = "../core" }
sc2-prost = { version = "0.1.0", path = "../pb/prost" }
glam = { version = "0.29", optional = true }
ordered-float = { version = "4.2", optional = true }
clap = { version = "4.5", features = ["std", "derive"], default-features = false, optional = true }
bpaf = { version = "0.9", features = ["derive"], optional = true }

[dev-dependencies]
clap = "4.5"
camino = "1.1"

[features]
default = ["ids", "unit", "act", "linalg", "game-loop", "debug", "ai-arena"]
ids = []
unit = []
act = []
linalg = ["dep:glam", "sc2-prost/glam", "dep:ordered-float"]
game-loop = []
debug = []
cli = []
cli-clap = ["dep:clap", "cli"]
cli-bpaf = ["dep:bpaf", "cli"]
ai-arena = ["cli"]
