[package]
name = "sc2-kiss"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
sc2-core = { version = "0.1.0", path = "../core" }
sc2-prost = { version = "0.1.0", path = "../pb/prost" }
glam = { version = "0.30", optional = true }
ordered-float = { version = "5.0", optional = true }
clap = { version = "4.5", features = ["std", "derive"], default-features = false, optional = true }
bpaf = { version = "0.9", features = ["derive"], optional = true }
bitflags = { version = "2.8", optional = true }

[dev-dependencies]
clap = "4.5"
camino = "1.1"

[features]
default = ["ids", "unit", "act", "chat", "map", "linalg", "game-loop", "debug", "ai-arena"]
ids = []
unit = []
act = ["ids", "linalg", "unit"]
chat = []
map = ["dep:bitflags", "linalg"]
linalg = ["dep:glam", "sc2-prost/glam", "dep:ordered-float"]
game-loop = []
debug = ["ids", "linalg", "unit"]
cli = []
cli-clap = ["dep:clap", "cli"]
cli-bpaf = ["dep:bpaf", "cli"]
ai-arena = ["cli"]
