[package]
name = "id-gen"
version = "0.1.0"
edition = "2021"

[dependencies]
sc2-core = { version = "0.1.0", path = "../../core" }
sc2-prost = { version = "0.1.0", path = "../../pb/prost", features = ["serde"] }
bpaf = { version = "0.9", features = ["derive", "dull-color"] }
camino = "1.1"
serde = "1.0"
serde_json = "1.0"
ron = "0.8"
convert_case = "0.7"
